feat: add grok t2i provider and update docs for multi-provider support

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 # User data (sessions, browser profiles)
 user_data/
 .claude/CLAUDE.md
+
+# Internals documentation
+internals/
+
 # Debug artifacts
 debug_dumps/
+debug/
 *_diagnostic.json
 *_comparison.json
 *_cookies.json
